--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,8 +1,12 @@
+footer {
+    margin-top: 50px;
+}
+
 .main_footer {
     width: 100%;
     height: auto;
     padding: 10px 20px;
-    background-color: #f5f5f5;
+    background-color: var(--body-bg-color);
 }
 
 .main_footer .container {
@@ -39,11 +43,11 @@
 }
 
 .col h4::before {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     bottom: -5px;
-    background-color: #e91e63;
+    background-color: var(--color-text-error);
     height: 1.5px;
     width: 50px;
 }
@@ -77,7 +81,6 @@
     text-align: center;
     line-height: 36px;
     border-radius: 50%;
-    background-color: #ffffff;
     font-size: 20px;
     transition: all 0.3s ease-out;
 }
@@ -102,14 +105,14 @@
 
 /* RESPONSIVE */
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .col {
-        width: 33%;
+        /* width: 33%; */
         margin-bottom: 20px;
     }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 640px) {
     .col {
         width: 100%;
         margin-bottom: 25px;
