--- a/src/Components/Navbar/navbar.module.css
+++ b/src/Components/Navbar/navbar.module.css
@@ -87,8 +87,9 @@ nav {
         font-weight: 600;
         padding: 15px;
         color: var(--color-text);
-        border: 1px solid var(--border-color);
+        border: 1px solid transparent;
         border-radius: 10px;
+        margin: 1.5px;
         background-color: var(--nav-links-bg-color);
     }
 
