--- a/src/Components/InputField/forminput.module.css
+++ b/src/Components/InputField/forminput.module.css
@@ -10,6 +10,8 @@
     border: 0.1px solid var(--border-color);
     border-radius: 7.5px;
     color: var(--color-text-input);
+    transition: border  var(--theme-toggle-time);
+    transition: background  var(--theme-toggle-time);
     background-color: var(--input-bg-color);
     font-weight: 500;
     outline: none;
