--- a/src/Components/Navbar/navbar.module.css
+++ b/src/Components/Navbar/navbar.module.css
@@ -2,6 +2,8 @@ nav {
     border-bottom: 2px solid var(--border-color);
     padding: 20px;
     background-color: var(--nav-footer-bg-color);
+    transition: border-color  var(--theme-toggle-time);
+    transition: background  var(--theme-toggle-time);
     position: fixed;
     top: 0;
     left: 0;
@@ -52,6 +54,7 @@ nav {
     border: 1px solid var(--border-color);
     border-radius: 10px;
     background-color: var(--nav-links-bg-color);
+    transition: background  var(--theme-toggle-time);
 }
 
 .links_res a:active {
@@ -100,4 +103,7 @@ nav {
     .buttons {
         display: none;
     }
+}
+html{
+    --size : 18px: 
 }
