--- a/src/Pages/LandingPage/landing.module.css
+++ b/src/Pages/LandingPage/landing.module.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: background  var(--theme-toggle-time);
 }
 
 .welcome img {
