--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,11 @@ a {
     width: 80%;
     margin: 10px auto;
 }
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+        text-align: center;
+        margin: 10px auto;
+    }
+}
