add verify text

--- a/src/Pages/AuthPages/auth.module.css
+++ b/src/Pages/AuthPages/auth.module.css
@@ -36,3 +36,10 @@
 .auth__footer a:hover {
     color: var(--button-hover-color);
 }
+
+.message {
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 600;
+    color: var(--button-color);
+}
